# k230_hal

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: async.rs
k230-big/: Cargo.toml  compile.sh
k230-big/.cargo/: config.toml
k230-big/k230-sys-big/: Cargo.toml  README.md  big.h  build.rs  mock_riscv.h
k230-big/k230-sys-big/src/: gpio.rs  lib.rs
k230-big/src/: lib.rs  main.rs
k230-big/src/io/: gpio.rs
k230-macros/: Cargo.toml
k230-macros/src/: lib.rs
k230-small/: Cargo.toml
k230-sys/: Cargo.toml  README.md  build.rs  wrapper.h
k230-sys/src/: lib.rs
src/: backup  ipcmsg.rs  ipmsg.rs  lib.rs
src/big/io/: gpio.rs  mod.rs
