workspace = { members = [ "k230-macros","k230-sys"] }
[package]
name = "k230_hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k230-sys = { path = "k230-sys" }
k230-macros = { path = "k230-macros" }
static_assertions = "1.1.0"

